# Game

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: ci.yml
algorithm/: CMakeLists.txt  IAlgorithmService.h
algorithm/include/: AIDecisionEngine.h  AlgorithmGrpcServiceImpl.h  AlgorithmService.h  CharacterStats.h  CooldownTracker.h  DamageCalculator.h  InputValidator.h  SkillTreeManager.h  StatusEffect.h
algorithm/src/: AIDecisionEngine.cpp  AlgorithmGrpcServiceImpl.cpp  AlgorithmService.cpp  CharacterStats.cpp  DamageCalculator.cpp  InputValidator.cpp  SkillTreeManager.cpp  main_server.cpp
application/: CMakeLists.txt  README.md  RESOURCES.md  游戏资源图片详细生成描述（完善版）.md
application/include/: GameApplication.h
application/include/audio/: AudioManager.h
application/include/config/: ConfigManager.h  GameConfig.h
application/include/core/: BattleScene.h  EventSystem.h  GameEngine.h  GameplayScene.h  LoadingScene.h  MainMenuScene.h  ResourceManager.h  Scene.h  SceneManager.h
application/include/game/: BattleSystem.h  GameState.h  InventorySystem.h  Player.h
application/include/graphics/: AnimationManager.h  SpriteRenderer.h
application/include/input/: InputManager.h
application/include/network/: AlgorithmServiceClient.h  NetworkManager.h  StrategyServiceClient.h
application/include/save/: SaveManager.h
application/include/ui/: GameplayWindow.h  InventoryWindow.h
application/include/utils/: Logger.h  PerformanceMonitor.h
application/qml/: BattleView.qml  GameplayView.qml  InventoryView.qml  MainMenu.qml  SettingsView.qml  main.qml
application/qml/components/: ActionButton.qml  BattleUI.qml  EnemyCard.qml  GameStatePanel.qml  GameplayUI.qml  InventoryGrid.qml  ItemCard.qml  ItemSlot.qml  MainMenu.qml  MenuButton.qml  PlayerInfo.qml  PlayerInfoPanel.qml  ProfessionCard.qml  QuickActionButton.qml  SaveSlotItem.qml  SkillSlot.qml  SkillTree.qml
application/resources/configs/: game_config.json  ui_config.json
application/src/: GameApplication.cpp  main.cpp
application/src/audio/: AudioManager.cpp
application/src/config/: ConfigManager.cpp  GameConfig.cpp
application/src/core/: BattleScene.cpp  EventSystem.cpp  GameEngine.cpp  GameplayScene.cpp  LoadingScene.cpp  MainMenuScene.cpp  ResourceManager.cpp  SceneManager.cpp
application/src/game/: BattleSystem.cpp  GameState.cpp  InventorySystem.cpp  Player.cpp
application/src/graphics/: AnimationManager.cpp  SpriteRenderer.cpp
application/src/input/: InputManager.cpp
application/src/network/: AlgorithmServiceClient.cpp  NetworkManager.cpp  StrategyServiceClient.cpp
application/src/save/: SaveManager.cpp
application/src/ui/: GameWindow.cpp  GameplayWindow.cpp  InventoryWindow.cpp  MainMenuWindow.cpp
application/src/utils/: Logger.cpp  PerformanceMonitor.cpp
config/: database_config.json
docs/: 代码规范.md  开发文档.md  架构设计文档.md
electron-client/: .gitignore  README.md  main.js  package-lock.json  package.json  preload.js
electron-client/scripts/: release-smoke.ps1
electron-client/src/: index.html  renderer.js  styles.css
electron-client/src/modules/: app-core.js  app-shell.js  backend-sync.js  chapter-rumors.js  combat-system.js  game-data.js  game-services.js  gameplay-runtime.js  local-state.js  npc-story-guide.js  progression-runtime.js  story-archive.js  story-runtime.js  ui-panels.js  ui-text.js  world-map.js
proto/: AlgorithmService.proto  CMakeLists.txt  StrategyService.proto
scripts/: build.sh  build_windows.cmd  build_windows.ps1  check_qt6.sh  create_application_structure.sh  create_placeholder_resources.sh  full_verify.sh  full_verify_windows.cmd  full_verify_windows.ps1  generate_placeholders.py  git_setup.sh  install_qt6.sh  setup_development.sh  start_all.cmd  start_all.ps1  update_readme.sh
strategy/: CMakeLists.txt
strategy/include/: IStrategyService.h  StrategyGrpcServiceImpl.h
strategy/include/Algorithm_interact/: AlgorithmInterface.h  EventScheduler.h  GameRuleManager.h  StrategyService.h  WorldStateEngine.h
strategy/include/Log/: AsyncLogService.h  ILogService.h  LogMacros.h  LogServiceConsole.h  LogServiceFile.h
strategy/include/common/: StrategyException.h  StrategyTypes.h
strategy/include/config/: ConfigService.h
strategy/include/database/: BaseRepository.h  ConnectionPool.h  DatabaseConfig.h  DatabaseConfigManager.h  DatabaseException.h  DatabaseFactory.h  IDatabaseConnection.h  JsonConfigParser.h  MigrationManager.h  MySQLConnection.h  PostgreSQLConnection.h  SQLiteConnection.h
strategy/include/monitor/: PerformanceMonitor.h
strategy/include/player_service/: IPlayerRepository.h  Player.h  PlayerRepositoryDatabase.h  PlayerRepositoryPostgres.h  PlayerService.h  PlayerServiceFactory.h
strategy/include/security/: PasswordHasher.h  SHA256.h
strategy/src/: StrategyGrpcServiceImpl.cpp  main_server.cpp
strategy/src/Algorithm_interact/: AlgorithmInterface.cpp  EventScheduler.cpp  GameRuleManager.cpp  StrategyService.cpp  WorldStateEngine.cpp
strategy/src/Log/: AsyncLogService.cpp  LogServiceConsole.cpp  LogServiceFile.cpp
strategy/src/config/: ConfigService.cpp
strategy/src/database/: BaseRepository.cpp  ConnectionPool.cpp  DatabaseConfig.cpp  DatabaseConfigManager.cpp  DatabaseFactory.cpp  JsonConfigParser.cpp  MigrationManager.cpp  MySQLConnection.cpp  PostgreSQLConnection.cpp  SQLiteConnection.cpp
strategy/src/monitor/: PerformanceMonitor.cpp
strategy/src/player_service/: PlayerRepositoryDatabase.cpp  PlayerRepositoryPostgres.cpp  PlayerService.cpp  PlayerServiceFactory.cpp
strategy/src/security/: PasswordHasher.cpp  SHA256.cpp
strategy/tests/: CMakeLists.txt  test_database_config.cpp  test_json_config_parser.cpp  test_password_hasher.cpp  test_sha256.cpp  test_strategy_logic.cpp
tests/: CMakeLists.txt
tests/algorithm_tests/: CMakeLists.txt  test_algorithm_service.cpp  test_character_stats.cpp  test_cooldown_tracker.cpp  test_damage_calculator.cpp  test_input_validator.cpp  test_status_effect.cpp
tests/strategy_log_test/: CMakeLists.txt  main.cpp
